--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         document.body.appendChild(iframe)
       })
 
-      // Wish there where a easier way to get some of webtorrent's classes
+      // Wish there where a easier way to get some of webtorrent's classes so i can patch stuff
       // const WebTorrent = require('webtorrent')
       // const { Torrent } = WebTorrent
       const dummyTorrent = client.add('06d67cc41f44fd57241551b6d95c2d1de38121ae')
