--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>browser server test</title>
   </head>
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webtorrent/0.108.6/webtorrent.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/webtorrent/0.108.6/webtorrent.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webtorrent/0.114.0/webtorrent.min.js"></script>
+
+
     <script src="range-parser.js"></script>
     <script>
       const client = new WebTorrent()
